# strepsuis_mdr

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .zenodo.json  ALGORITHMS.md  BENCHMARKS.md  CASE_STUDIES.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  MDR_2025_04_15.py  README.md  SECURITY.md  TESTING.md  TUTORIAL.md  USER_GUIDE.md  VALIDATION.md  docker-compose.yml  install_dependencies.bat  install_dependencies.ps1  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  strepsuis_mdr.py
.github/: copilot-instructions.md
.github/workflows/: test.yml
benchmarks/: performance_profile.py
data/: README.md
examples/: README.md  merged_resistance_data.csv
notebooks/: MDR_Analysis.ipynb  strepsuis-mdr_colab_demo.ipynb
strepsuis_mdr/: __init__.py  __main__.py  advanced_mdr_analysis.py  analyzer.py  cli.py  config.py  coselection_analysis.py  data_backend.py  excel_report_utils.py  generate_synthetic_data.py  large_data_integration.py  mdr_analysis_core.py  optimizations.py  output_handler.py  parallel_network.py  synthetic_data_utils.py  target_prioritization.py  validation_utils.py
synthetic_data/: GENERATION_METHODOLOGY.md  adversarial_dataset.csv  clean_dataset.csv  generate_synthetic_data.py  noisy_dataset.csv  synthetic_AMR_genes.csv  synthetic_MIC.csv  synthetic_Virulence.csv  synthetic_amr_data.csv  synthetic_metadata.json
tests/: conftest.py  test_analyzer.py  test_basic.py  test_cli.py  test_cli_and_utils.py  test_comprehensive_real_data.py  test_config.py  test_config_extended.py  test_coselection_analysis.py  test_coverage_boost_cli.py  test_coverage_boost_coselection.py  test_coverage_boost_mdr_core.py  test_coverage_boost_optimizations.py  test_coverage_boost_target_prioritization.py  test_cross_module_consistency.py  test_data_backend.py  test_end_to_end.py  test_excel_report_utils.py  test_generate_synthetic.py  test_innovations_real_data.py  test_mathematical_validation.py  test_mdr_analysis_core.py  test_network_risk_scoring.py  test_optimizations.py  test_parallel_network.py  test_performance.py  test_performance_benchmarks.py  test_performance_validation.py  test_quick_coverage.py  test_real_data_validation.py  test_report_generation.py  test_sequential_patterns.py  test_statistical_validation.py  test_stress.py  test_synthetic_validation.py  test_target_prioritization.py  test_uncertainty.py  test_unit_analysis.py  test_utilities.py  test_validation_and_synthetic.py  (+2 more)
validation/: CROSS_MODULE_CONSISTENCY_REPORT.md  MATHEMATICAL_VALIDATION_REPORT.md  PERFORMANCE_BENCHMARKS_REPORT.md  PERFORMANCE_VALIDATION_REPORT.md  REAL_DATA_VALIDATION_REPORT.md  SYNTHETIC_DATA_VALIDATION_REPORT.md  benchmark_results.json  cross_module_consistency_results.json  performance_validation_results.json  real_data_validation_results.json  synthetic_validation_results.json  validation_results.json
